@@ -14,6 +14,9 @@ AL_AUTOWAH_MIN_RESONANCE                            : 2.0f
 AL_AUTOWAH_PEAK_GAIN                                : 0004
 AL_AUTOWAH_RELEASE_TIME                             : 0002
 AL_AUTOWAH_RESONANCE                                : 0003
+AL_BANDPASS_GAIN                                    : 0001
+AL_BANDPASS_GAINHF                                  : 0003
+AL_BANDPASS_GAINLF                                  : 0002
 AL_CHORUS_DEFAULT_DELAY                             : 0.016f
 AL_CHORUS_DEFAULT_DEPTH                             : 0.1f
 AL_CHORUS_DEFAULT_FEEDBACK                          : 0.25f
@@ -277,6 +280,8 @@ AL_FREQUENCY_SHIFTER_MIN_FREQUENCY                  : 0.0f
 AL_FREQUENCY_SHIFTER_MIN_LEFT_DIRECTION             : 0
 AL_FREQUENCY_SHIFTER_MIN_RIGHT_DIRECTION            : 0
 AL_FREQUENCY_SHIFTER_RIGHT_DIRECTION                : 0003
+AL_HIGHPASS_GAIN                                    : 0001
+AL_HIGHPASS_GAINLF                                  : 0002
 AL_LOWPASS_GAIN                                     : 0001
 AL_LOWPASS_GAINHF                                   : 0002
 AL_PITCH_SHIFTER_COARSE_TUNE                        : 0001
