@@ -5,3 +5,4 @@
 20100114 code: all previously missing parameter constants now available
                in OpenAL.Extension.EFX_Thin.
 20100114 code: OpenAL.Extension.EFX effect type/parameter setting implemented.
+20100114 code: OpenAL.Extension.EFX filter type/parameter setting implemented.
